--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,12 +9,10 @@
  * argument is a `String` with the title of the page, the second
  * argument is an `Html` object containing the body of the page.
  *@
-@main("Welcome to Play") {
+@main("Welcome to Play 2 / React / Typescript sample application") {
 
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-     *@
-    @play20.welcome(message, style = "Java")
+    <div id="example"></div>
 
+    <script src="@routes.Assets.versioned("frontend/vendor.js")"></script>
+    <script src="@routes.Assets.versioned("frontend/sample.js")"></script>
 }
