Use *CSS loaders in webpack

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,6 +11,8 @@
  *@
 @main("Welcome to Play 2 / React / Typescript sample application") {
 
+    <link rel="stylesheet" href="@routes.Assets.versioned("frontend/sample.css")">
+
     <div id="example"></div>
 
     <script src="@routes.Assets.versioned("frontend/vendor.js")"></script>
